--- a/templates/index.html
+++ b/templates/index.html
@@ -40,7 +40,7 @@
       {% comment %} <h1><a href="index.html" style="color: #f5f823;">Alex Sobreira</a></h1> {% endcomment %}
       <!-- Uncomment below if you prefer to use an image logo -->
       <a href="index.html" class="mr-auto"><img src="{% static 'assets_axs/img/logo.png' %}" alt="" class="img-fluid" ></a>
-      <h2>Um artista com dados e programação da <span>America Latina</span></h2>
+      <h2><span>Um maestro</span> da análise de dados e programação na América Latina</h2>
 
       <nav id="navbar" class="navbar">
         <ul>
@@ -784,11 +784,10 @@
             <i class="bx bx-share-alt"></i>
             <h3>Mídias Sociais</h3>
             <div class="social-links">
-              <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
-              <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
+              <a href="#" class="twitter"><i class="bi bi-whatsapp"></i></a>
+              <a href="#" class="facebook"><i class="bi bi-tiktok"></i></a>
               <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-              <a href="#" class="google-plus"><i class="bi bi-skype"></i></a>
-              <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+              <a href="#" class="google-plus"><i class="bi bi-twitter-x"></i></a>
             </div>
           </div>
         </div>
