--- a/templates/index.html
+++ b/templates/index.html
@@ -55,10 +55,10 @@
       </nav><!-- .navbar -->
 
       <div class="social-links">
-        <a href="#" class="twitter"><i class="bi bi-whatsapp"></i></a>
-        <a href="#" class="facebook"><i class="bi bi-tiktok"></i></a>
-        <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-        <a href="#" class="linkedin"><i class="bi bi-twitter-x"></i></a>
+        <a href="https://wa.me/5511916682103" class="whastapp"><i class="bi bi-whatsapp"></i></a>
+        <a href="https://www.tiktok.com/" class="tiktok"><i class="bi bi-tiktok"></i></a>
+        <a href="https://www.instagram.com/axs_consultoria" class="instagram"><i class="bi bi-instagram"></i></a>
+        <a href="https://twitter.com/consultoriaaxs" class="twitter"><i class="bi bi-twitter-x"></i></a>
       </div>
 
     </div>
@@ -784,10 +784,10 @@
             <i class="bx bx-share-alt"></i>
             <h3>Mídias Sociais</h3>
             <div class="social-links">
-              <a href="#" class="twitter"><i class="bi bi-whatsapp"></i></a>
-              <a href="#" class="facebook"><i class="bi bi-tiktok"></i></a>
-              <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-              <a href="#" class="google-plus"><i class="bi bi-twitter-x"></i></a>
+              <a href="https://wa.me/5511916682103" class="whastapp"><i class="bi bi-whatsapp"></i></a>
+              <a href="https://www.tiktok.com/" class="tiktok"><i class="bi bi-tiktok"></i></a>
+              <a href="https://www.instagram.com/axs_consultoria" class="instagram"><i class="bi bi-instagram"></i></a>
+              <a href="https://twitter.com/consultoriaaxs" class="twitter"><i class="bi bi-twitter-x"></i></a>
             </div>
           </div>
         </div>
