--- a/static/assets_axs/css/style.css
+++ b/static/assets_axs/css/style.css
@@ -904,7 +904,7 @@ section .container {
 }
 
 .portfolio .portfolio-wrap .portfolio-links a:hover {
-  color: #63eda3;
+  color: #ffdf2c;
 }
 
 .portfolio .portfolio-wrap:hover::before {
